Add support for strawberry.federation.field in mypy

--- a/tests/mypy/test_fields.yml
+++ b/tests/mypy/test_fields.yml
@@ -67,7 +67,6 @@
     main:13: note: Revealed type is 'builtins.int'
     main:14: error: "int" has no attribute "trim"
 
-
 - case: test_field_with_default_cannot_be_before_non_default
   main: |
     import strawberry
@@ -79,7 +78,6 @@
 
   out: |
     main:6: error: Attributes without a default cannot follow attributes with one
-
 
 - case: test_using_strawberry_field_does_not_break
   main: |
@@ -93,7 +91,6 @@
     reveal_type(Example.a)
   out: |
     main:8: note: Revealed type is 'builtins.str'
-
 
 - case: test_does_not_put_fields_with_resolver_in_init
   main: |
@@ -113,3 +110,16 @@
     reveal_type(i.a)
   out: |
     main:14: note: Revealed type is 'builtins.str'
+
+- case: test_using_strawberry_federation_field_does_not_break
+  main: |
+    import strawberry
+
+    @strawberry.type
+    class Example:
+        a: str = strawberry.federation.field(description='Example')
+        b: str
+
+    reveal_type(Example.a)
+  out: |
+    main:8: note: Revealed type is 'builtins.str'
