--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ flake8-black = "^0.2.1"
 django = {version = ">=2,<4", optional = false}
 pydantic = {version = "^1.6.1", optional = false}
 uvicorn = ">=0.11.6,<0.13.0"
+promise = "^2.3"
 
 [tool.poetry.extras]
 debug-server = ["uvicorn"]
