Only comment if there is at least one link

--- a/.github/workflows/ok-to-preview.yml
+++ b/.github/workflows/ok-to-preview.yml
@@ -53,12 +53,15 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
           const links = JSON.parse(process.env.links).map(l => `- ${l}`).join('\n')
-          const message = `
-            Hi 👋  You can find a preview of the docs here: \n\n${links}
-          `.trim()
-          await github.issues.createComment({
-            issue_number: process.env.number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: message
-          })
+
+          if (links.length) {
+            const message = `
+              Hi 👋  You can find a preview of the docs here: \n\n${links}
+            `.trim()
+            await github.issues.createComment({
+              issue_number: process.env.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: message
+            })
+          }
