--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -2,6 +2,7 @@ name: Release file check
 
 on:
   pull_request:
+    types: [opened, synchronize, reopened, ready_for_review, review_requested]
     branches:
     - master
 
