Remove info where not needed and improve typings

--- a/tests/mypy/test_fields.yml
+++ b/tests/mypy/test_fields.yml
@@ -14,6 +14,7 @@
 - case: test_all_field_usage
   main: |
     import strawberry
+    from strawberry.types import Info
 
     def some_resolver() -> str:
         return ""
@@ -26,7 +27,7 @@
         d: str = strawberry.field(resolver=some_resolver)
 
         @strawberry.field(description="ABC")
-        def e(self, info) -> str:
+        def e(self, info: Info) -> str:
             return ""
 
         @strawberry.field(name="f")
@@ -40,12 +41,12 @@
     reveal_type(Example.e)
     reveal_type(Example.f_resolver)
   out: |
-    main:21: note: Revealed type is 'builtins.str'
     main:22: note: Revealed type is 'builtins.str'
     main:23: note: Revealed type is 'builtins.str'
     main:24: note: Revealed type is 'builtins.str'
-    main:25: note: Revealed type is 'Any'
+    main:25: note: Revealed type is 'builtins.str'
     main:26: note: Revealed type is 'Any'
+    main:27: note: Revealed type is 'Any'
 
 - case: test_private_field
   main: |
