Use action to send coverage

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,22 +19,20 @@ jobs:
           python-version: ${{ matrix.python-version }}
           architecture: x64
 
-      - run: pip install poetry codecov
+      - run: pip install poetry
       - name: Install dependencies
         run: poetry install
       - name: Install dependencies
         run: poetry add django==${{ matrix.django }}
 
       - name: pytest
-        run: |
-            set +e
-            OUTPUT=$(poetry run py.test --cov-report xml --cov=. --cov-fail-under 80)
-            STATUS=$?
-            echo "$OUTPUT"
-            codecov
-            exit $STATUS
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        run: poetry run py.test --cov-report xml --cov=. --cov-fail-under 80
+      - uses: codecov/codecov-action@v1
+        if: ${{ always() }}
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
+          verbose: true
 
   flake8:
     runs-on: ubuntu-latest
