--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ python-dateutil = "^2.7.0"
 cached-property = "^1.5.2"
 pydantic = {version = "^1.6.1", optional = true}
 python-multipart = "^0.0.5"
-sanic = "^20.12.2"
+sanic = {version = "^20.12.2", optional = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
@@ -68,6 +68,7 @@ django = {version = ">=2,<4", optional = false}
 pydantic = {version = "^1.6.1", optional = false}
 email-validator = {version = "^1.1.2", optional = false}
 uvicorn = ">=0.11.6,<0.14.0"
+sanic = "^20.12.2"
 
 [tool.poetry.extras]
 debug-server = ["uvicorn"]
@@ -75,6 +76,7 @@ django = ["django", "pytest-django", "asgiref"]
 flask = ["flask", "pytest-flask"]
 opentelemetry = ["opentelemetry-api", "opentelemetry-sdk"]
 pydantic = ["pydantic"]
+sanic = ["sanic"]
 
 [tool.poetry.scripts]
 strawberry = "strawberry.cli:run"
