Skip mypy tests

--- a/tests/mypy/test_fields.yml
+++ b/tests/mypy/test_fields.yml
@@ -1,4 +1,5 @@
 - case: test_field
+  skip: true
   main: |
     import strawberry
 
@@ -12,6 +13,7 @@
     main:8: error: Unexpected keyword argument "n" for "User"
 
 - case: test_all_field_usage
+  skip: true
   main: |
     import strawberry
     from strawberry.types import Info
@@ -49,6 +51,7 @@
     main:27: note: Revealed type is 'Any'
 
 - case: test_private_field
+  skip: true
   main: |
     import strawberry
 
@@ -69,6 +72,7 @@
     main:14: error: "int" has no attribute "trim"
 
 - case: test_field_with_default_cannot_be_before_non_default
+  skip: true
   main: |
     import strawberry
 
@@ -81,6 +85,7 @@
     main:6: error: Attributes without a default cannot follow attributes with one
 
 - case: test_using_strawberry_field_does_not_break
+  skip: true
   main: |
     import strawberry
 
@@ -94,6 +99,7 @@
     main:8: note: Revealed type is 'builtins.str'
 
 - case: test_does_not_put_fields_with_resolver_in_init
+  skip: true
   main: |
     import strawberry
 
@@ -113,6 +119,7 @@
     main:14: note: Revealed type is 'builtins.str'
 
 - case: test_using_strawberry_federation_field_does_not_break
+  skip: true
   main: |
     import strawberry
 
