--- a/tests/mypy/test_dataloaders.yml
+++ b/tests/mypy/test_dataloaders.yml
@@ -1,4 +1,5 @@
 - case: test_dataloader_no_types
+  skip: true
   main: |
     from strawberry.dataloader import DataLoader
 
@@ -18,6 +19,7 @@
     main:13: note: Revealed type is 'Any'
 
 - case: test_dataloader
+  skip: true
   main: |
     from typing import List
 
