--- a/tests/mypy/test_decorators.yml
+++ b/tests/mypy/test_decorators.yml
@@ -1,4 +1,5 @@
 - case: test_type
+  skip: true
   main: |
     import strawberry
 
@@ -12,6 +13,7 @@
     main:8: error: Unexpected keyword argument "n" for "User"
 
 - case: test_input
+  skip: true
   main: |
     import strawberry
 
@@ -25,6 +27,7 @@
     main:8: error: Unexpected keyword argument "n" for "EditUserInput"
 
 - case: test_interface
+  skip: true
   main: |
     import strawberry
 
