--- a/tests/mypy/test_enum.yml
+++ b/tests/mypy/test_enum.yml
@@ -1,4 +1,5 @@
 - case: test_enum
+  skip: true
   main: |
     from enum import Enum
 
@@ -19,6 +20,7 @@
     main:14: note: Revealed type is 'main.IceCreamFlavour'
 
 - case: test_enum_from_var
+  skip: true
   main: |
     from typing import Type
     from enum import Enum
@@ -45,6 +47,7 @@
     main:20: note: Revealed type is 'Any'
 
 - case: test_enum_from_cast
+  skip: true
   main: |
     from enum import Enum
     from typing import Type, cast
@@ -66,6 +69,7 @@
     main:15: note: Revealed type is 'Type[enum.Enum]'
 
 - case: test_enum_with_decorator
+  skip: true
   main: |
     from enum import Enum
 
@@ -85,6 +89,7 @@
     main:13: note: Revealed type is 'main.IceCreamFlavour'
 
 - case: test_enum_with_decorator_and_name
+  skip: true
   main: |
     from enum import Enum
 
