--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.7', '3.8', '3.9']
-        django: [3.1.4, 3.0.11, 2.2.17]
+        django: [3.2rc1, 3.1.7, 3.0.13, 2.2.19]
 
     steps:
       - uses: actions/checkout@v2
