--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.7', '3.8', '3.9']
-        django: [3.2rc1, 3.1.7, 3.0.13, 2.2.19]
+        django: [3.2, 3.1.8, 3.0.14, 2.2.20]
 
     steps:
       - uses: actions/checkout@v2
