--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ cached-property = "^1.5.2"
 pydantic = {version = "^1.6.1", optional = true}
 python-multipart = "^0.0.5"
 sanic = {version = "^20.12.2", optional = true}
+aiohttp = {version = "^3.7.4.post0", optional = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
@@ -68,8 +69,11 @@ pydantic = {version = "^1.6.1", optional = false}
 email-validator = {version = "^1.1.2", optional = false}
 uvicorn = ">=0.11.6,<0.14.0"
 sanic = "^20.12.2"
+aiohttp = "^3.7.4.post0"
+pytest-aiohttp = "^0.3.0"
 
 [tool.poetry.extras]
+aiohttp = ["aiohttp", "pytest-aiohttp"]
 debug-server = ["uvicorn"]
 django = ["django", "pytest-django", "asgiref"]
 flask = ["flask", "pytest-flask"]
