--- a/mypy_tests.ini
+++ b/mypy_tests.ini
@@ -2,7 +2,6 @@
 plugins = strawberry.ext.mypy_plugin
 check_untyped_defs = True
 ignore_errors = False
-; ignore_missing_imports = True
 strict_optional = True
 implicit_reexport = False
 ; Disabled because of this bug: https://github.com/python/mypy/issues/9689
@@ -11,7 +10,9 @@ implicit_reexport = False
 [mypy-graphql.*]
 ignore_errors = True
 
-; Pydantic dependencies
+[mypy-pydantic.*]
+ignore_errors = True
+
 [mypy-email_validator.*]
 ignore_missing_imports = True
 
