--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ django = {version = ">=2,<4", optional = true}
 graphql-core = {version = "^3.1.0"}
 asgiref = {version = "^3.2", optional = true}
 flask = {version = "^1.1", optional = true}
+chalice = {version = "^1.22", optional = true}
 typing_extensions = "^3.7.4"
 opentelemetry-api = {version = "^0.17b0", optional = true}
 opentelemetry-sdk = {version = "^0.17b0", optional = true}
@@ -91,6 +92,7 @@ flask = ["flask", "pytest-flask"]
 opentelemetry = ["opentelemetry-api", "opentelemetry-sdk"]
 pydantic = ["pydantic"]
 sanic = ["sanic"]
+chalice = ["chalice"]
 
 [tool.poetry.scripts]
 strawberry = "strawberry.cli:run"
