--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,13 +26,10 @@ jobs:
         run: echo '::set-output name=release::$(autopub check)'
       - name: Publish
         if: ${{ steps.check_release.outputs.release=='' }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
         run: |
-          git remote set-url origin https://$GITHUB_TOKEN@github.com/${{ github.repository }}
+          git remote set-url origin https://${{ secrets.BOT_TOKEN }}@github.com/${{ github.repository }}
           autopub prepare
           poetry build
           autopub commit
           autopub githubrelease
-          poetry publish --username __token__ --password $PYPI_TOKEN
+          poetry publish --username __token__ --password ${{ secrets.PYPI_TOKEN }}
