--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "strawberry-graphql"
+name = "autodeploy-tests"
 packages = [ { include = "strawberry" } ]
 version = "0.63.0"
 description = "A library for creating GraphQL APIs"
