--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,9 @@ jobs:
           pip install autopub
       - name: Check if we should release
         id: check_release
-        run: echo '::set-output name=release::$(autopub check)'
+        run: |
+          autopub check
+          echo '::set-output name=release::$(autopub check)'
       - name: Publish
         if: ${{ steps.check_release.outputs.release=='' }}
         run: |
