--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,11 +23,8 @@ jobs:
           pip install autopub
       - name: Check if we should release
         id: check_release
-        run: |
-          autopub check
-          echo '::set-output name=release::$(autopub check)'
+        run: autopub check
       - name: Publish
-        if: ${{ steps.check_release.outputs.release=='' }}
         run: |
           git remote set-url origin https://${{ secrets.BOT_TOKEN }}@github.com/${{ github.repository }}
           autopub prepare
