--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,8 @@ jobs:
       - name: Check if we should release
         id: check_release
         run: echo '::set-output name=release::$(autopub check)'
+      - name: print
+        run: echo ${{steps.check_release.outputs.release}}
       - name: Publish
         if: steps.check_release.outputs.release == ''
         env:
