--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,9 @@ jobs:
           OUTPUT=$(autopub check)
           echo '::set-output name=release::$OUTPUT'
       - name: print
-        run: echo ${{steps.check_release.outputs.release}}
+        run:
+          echo "output"
+          echo ${{steps.check_release.outputs.release}}
       - name: Publish
         if: steps.check_release.outputs.release == ''
         env:
