--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,8 +26,7 @@ jobs:
         id: check_release
         run: |
           set +e
-          OUTPUT=$(autopub check)
-          echo ::set-output name=release::$OUTPUT
+          echo ::set-output name=release::$(autopub check)
       - name: print
         run: echo ${{steps.check_release.outputs.release}}
       - name: Publish
