Add link to discord

--- a/.github/workflows/inclusive-organization.yml
+++ b/.github/workflows/inclusive-organization.yml
@@ -17,5 +17,8 @@ jobs:
 
             Also, feel free to request a sticker by filling this form 👉
             https://forms.gle/dmnfQUPoY5gZbVT67
+
+            Oh, also check out or discord server if you haven't seen it yet 👉
+            https://strawberry.rocks/discord
         env:
           ACCESS_TOKEN: ${{ secrets.INCLUSIVE_ORGANIZATION_TOKEN }}
