--- a/tests/mypy/test_union.yml
+++ b/tests/mypy/test_union.yml
@@ -18,12 +18,12 @@
     reveal_type(Response)
     reveal_type(a)
 
-    a = User('abc')
+    a = User("abc")
     reveal_type(a)
   out: |
-    main:16: note: Revealed type is 'builtins.object'
-    main:17: note: Revealed type is 'Union[main.User, main.Error]'
-    main:20: note: Revealed type is 'main.User'
+    main:16: note: Revealed type is "builtins.object"
+    main:17: note: Revealed type is "Union[main.User, main.Error]"
+    main:20: note: Revealed type is "main.User"
 
 - case: test_union_generics
   main: |
@@ -47,8 +47,8 @@
     a: Result
     reveal_type(a)
   out: |
-    main:16: note: Revealed type is 'builtins.object'
-    main:19: note: Revealed type is 'Union[main.Error, main.Edge[builtins.str]]'
+    main:16: note: Revealed type is "builtins.object"
+    main:19: note: Revealed type is "Union[main.Error, main.Edge[builtins.str]]"
 
 - case: test_union_kwargs
   main: |
@@ -70,9 +70,9 @@
     reveal_type(Response)
     reveal_type(a)
 
-    a = User('abc')
+    a = User("abc")
     reveal_type(a)
   out: |
-    main:16: note: Revealed type is 'builtins.object'
-    main:17: note: Revealed type is 'Union[main.User, main.Error]'
-    main:20: note: Revealed type is 'main.User'
+    main:16: note: Revealed type is "builtins.object"
+    main:17: note: Revealed type is "Union[main.User, main.Error]"
+    main:20: note: Revealed type is "main.User"
