--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,16 @@ uvicorn = ">=0.11.6,<0.14.0"
 sanic = "^20.12.2"
 aiohttp = "^3.7.4.post0"
 pytest-aiohttp = "^0.3.0"
+types-ujson = "^0.1.1"
+types-typed-ast = "^1.4.2"
+types-toml = "^0.1.3"
+types-setuptools = "^57.0.0"
+types-requests = "^2.25.0"
+types-python-dateutil = "^0.1.4"
+types-freezegun = "^0.1.4"
+types-chardet = "^0.1.3"
+types-certifi = "^0.1.4"
+types-aiofiles = "^0.1.5"
 
 [tool.poetry.extras]
 aiohttp = ["aiohttp", "pytest-aiohttp"]
