--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ pytest-django = {version = "^4.4"}
 asgiref = "^3.2"
 pytest-flask = {version = "^1.2.0"}
 flask = {version = "^1.1"}
+chalice = {version = "^1.22"}
 requests = "^2.25.1"
 pre-commit = "^2.13.0"
 pytest-benchmark = "^3.4.1"
