--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -15,4 +15,4 @@ jobs:
 
     - name: Release file check
       uses: ./.github/release-check-action
-      if: github.event.pull_request.draft == false
+        # if: github.event.pull_request.draft == false
