--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -16,3 +16,6 @@ jobs:
     - name: Release file check
       uses: ./.github/release-check-action
         # if: github.event.pull_request.draft == false
+
+    - name: Release twitter card
+      run: echo ${{ env.CHANGELOG }}
