--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -17,5 +17,9 @@ jobs:
       uses: ./.github/release-check-action
         # if: github.event.pull_request.draft == false
 
-    - name: Release twitter card
-      run: echo ${{ env.CHANGELOG }}
+    - name: Generate Twitter card preview
+      uses: strawberry-graphql/release-cards@main
+      with:
+        version: "Next"
+        contributor: ${{ github.event.pull_request.user.login }}
+        description: ${{ env.CHANGELOG }}
