--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ include = ["strawberry/py.typed"]
 python = "^3.7"
 starlette = {version = ">=0.13.6,<0.17.0", optional = true}
 click = {version = "^7.0", optional = true}
-hupper = "^1.5"
+hupper = {version = "^1.5", optional = true}
 pygments = "^2.3"
 uvicorn = {version = ">=0.11.6,<0.14.0", optional = true}
 django = {version = ">=2,<4", optional = true}
@@ -85,7 +85,7 @@ types-aiofiles = "^0.1.7"
 
 [tool.poetry.extras]
 aiohttp = ["aiohttp", "pytest-aiohttp"]
-debug-server = ["starlette", "uvicorn"]
+debug-server = ["starlette", "uvicorn", "hupper"]
 django = ["django", "pytest-django", "asgiref"]
 flask = ["flask", "pytest-flask"]
 opentelemetry = ["opentelemetry-api", "opentelemetry-sdk"]
