--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ pydantic = {version = "^1.6.1", optional = false}
 email-validator = {version = "^1.1.3", optional = false}
 starlette = ">=0.13.6,<0.17.0"
 uvicorn = ">=0.11.6,<0.14.0"
+hupper = "^1.5"
 sanic = "^20.12.2"
 aiohttp = "^3.7.4.post0"
 pytest-aiohttp = "^0.3.0"
