--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -23,3 +23,22 @@ jobs:
         version: "Next"
         contributor: ${{ github.event.pull_request.user.login }}
         description: ${{ env.CHANGELOG }}
+
+    - name: Uploads preview to imgur
+      run: |
+        echo IMAGE_URL=$(curl --location --request POST "https://api.imgur.com/3/image" \
+          --header 'Authorization: Client-ID $IMGUR_CLIENT_ID' \
+          --form "image=@screenshot.png;filename=screenshot.png;type=image/png" \
+          | jq  --raw-output '.data.link') >> $GITHUB_ENV
+      env:
+        IMGUR_CLIENT_ID: ${{ secrets.IMGUR_CLIENT_ID }}
+    - uses: mshick/add-pr-comment@v1
+      with:
+        message: |
+          **Hello**
+          🌏
+          ![](${{ env.IMAGE_URL }})
+          !
+        repo-token: ${{ secrets.BOT_TOKEN}}
+        repo-token-user-login: 'botberry'
+        allow-repeats: false
