--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -31,6 +31,6 @@ jobs:
           --fail \
           --header "Authorization: Client-ID $IMGUR_CLIENT_ID" \
           --form "image=@screenshot.png;filename=screenshot.png;type=image/png" \
-          | jq  --raw-output '.data.link') >> $GITHUB_ENV
+          | jq  --raw-output '.data.link')
       env:
         IMGUR_CLIENT_ID: ${{ secrets.IMGUR_CLIENT_ID }}
