--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -12,6 +12,8 @@ jobs:
 
     outputs:
       changelog: ${{ steps.release-check.outputs.changelog }}
+      status: ${{ steps.release-check.outputs.release_status }}
+      change_type: ${{ steps.release-check.outputs.change_type }}
 
     steps:
     - uses: actions/checkout@v1
@@ -25,6 +27,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: release-file-check
 
+    outputs:
+      url: ${{ steps.upload.outputs.url }}
+
     steps:
     - name: Generate Twitter card preview
       uses: strawberry-graphql/release-cards@main
@@ -34,8 +39,9 @@ jobs:
         description: ${{ fromJSON(needs.release-file-check.outputs.changelog) }}
 
     - name: Uploads preview to imgur
+      id: upload
       run: |
-        echo 'set-output::release_card_url=$(curl --location --request POST "https://api.imgur.com/3/image" \
+        echo 'set-output::url=$(curl --location --request POST "https://api.imgur.com/3/image" \
           --fail \
           --header "Authorization: Client-ID $IMGUR_CLIENT_ID" \
           --form "image=@screenshot.png;filename=screenshot.png;type=image/png" \
@@ -53,6 +59,7 @@ jobs:
       uses: ./.github/bot-action
       with:
         pr_number: ${{ github.event.number }}
-        status: "OK"
-        change_type: "PATCH"
-        changelog: "demo"
+        status: ${{ needs.release-file-check.outputs.status }}
+        change_type: ${{ needs.release-file-check.outputs.change_type }}
+        changelog: ${{ fromJSON(needs.release-file-check.outputs.changelog) }}
+        release_card_url: ${{ needs.generate-preview.outputs.url }}
