--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -41,11 +41,11 @@ jobs:
     - name: Uploads preview to imgur
       id: upload
       run: |
-        echo 'set-output::url=$(curl --location --request POST "https://api.imgur.com/3/image" \
+        echo ::set-output name=url::$(curl --location --request POST "https://api.imgur.com/3/image" \
           --fail \
           --header "Authorization: Client-ID $IMGUR_CLIENT_ID" \
           --form "image=@screenshot.png;filename=screenshot.png;type=image/png" \
-          | jq  --raw-output '.data.link')'
+          | jq  --raw-output '.data.link')
       env:
         IMGUR_CLIENT_ID: ${{ secrets.IMGUR_CLIENT_ID }}
 
