--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -26,7 +26,7 @@ jobs:
   generate-preview:
     runs-on: ubuntu-latest
     needs: release-file-check
-    if: always()
+    if: always() && github.event.pull_request.draft == false
 
     outputs:
       url: ${{ steps.upload.outputs.url }}
@@ -55,7 +55,7 @@ jobs:
   send-comment:
     runs-on: ubuntu-latest
     needs: [release-file-check, generate-preview]
-    if: always()
+    if: always() && github.event.pull_request.draft == false
 
     steps:
     - uses: actions/checkout@v1
