--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -53,7 +53,7 @@ jobs:
   generate-preview:
     runs-on: ubuntu-latest
     needs: [release-file-check, read-tweet-md]
-    if: always() && github.event.pull_request.draft == false
+    if: always() && steps.release-file-check.outputs.skip != "true" && github.event.pull_request.draft == false
 
     outputs:
       url: ${{ steps.upload.outputs.url }}
@@ -82,7 +82,7 @@ jobs:
   send-comment:
     runs-on: ubuntu-latest
     needs: [release-file-check, generate-preview]
-    if: always() && github.event.pull_request.draft == false
+    if: always() && steps.release-file-check.outputs.skip != "true" && github.event.pull_request.draft == false
 
     steps:
     - uses: actions/checkout@v1
