--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -14,6 +14,7 @@ jobs:
       changelog: ${{ steps.release-check.outputs.changelog }}
       status: ${{ steps.release-check.outputs.release_status }}
       change_type: ${{ steps.release-check.outputs.change_type }}
+      skip: ${{ steps.release-check.outputs.skip }}
 
     steps:
     - uses: actions/checkout@v1
@@ -53,7 +54,7 @@ jobs:
   generate-preview:
     runs-on: ubuntu-latest
     needs: [release-file-check, read-tweet-md]
-    if: always() && jobs.release-file-check.outputs.skip != "true" && github.event.pull_request.draft == false
+    if: always() && needs.release-file-check.outputs.skip != "true" && github.event.pull_request.draft == false
 
     outputs:
       url: ${{ steps.upload.outputs.url }}
@@ -82,7 +83,7 @@ jobs:
   send-comment:
     runs-on: ubuntu-latest
     needs: [release-file-check, generate-preview]
-    if: always() && jobs.release-file-check.outputs.skip != "true" && github.event.pull_request.draft == false
+    if: always() && needs.release-file-check.outputs.skip != "true" && github.event.pull_request.draft == false
 
     steps:
     - uses: actions/checkout@v1
