--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -31,6 +31,8 @@ jobs:
     - uses: actions/checkout@v1
     - name: Extract tweet message and changelog
       shell: python
+      env:
+        CHANGELOG: ${{ needs.release-file-check.outputs.changelog }}
       run: |
         import os
         from pathlib import Path
