--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -34,36 +34,9 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Extract tweet message and changelog
-      id: extract
-      shell: python
-      env:
-        CHANGELOG: ${{ needs.release-file-check.outputs.changelog }}
-      run: |
-        import base64
-        import os
-        from pathlib import Path
-
-        changelog = os.environ["CHANGELOG"]
-        card_text = ""
-        tweet = ""
-
-        tweet_path = Path("./TWEET.md")
-
-        if tweet_path.exists():
-          with tweet_path.open(mode="r") as f:
-            contents = f.read()
-
-            tweet, _, card_text = [part.strip() for part in contents.partition("---")]
-
-        if not card_text:
-          card_text = changelog
-        else:
-          card_text = base64.b64encode(card_text.encode("utf-8")).decode("ascii")
-
-        tweet = base64.b64encode(tweet.encode("utf-8")).decode("ascii")
-
-        print(f"::set-output name=tweet::{tweet}")
-        print(f"::set-output name=card_text::{card_text}")
+      uses: ./.github/read-tweet-action
+      with:
+        changelog: ${{ needs.release-file-check.outputs.changelog }}
 
 
   generate-preview:
