--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -23,9 +23,26 @@ jobs:
       id: release-check
       if: github.event.pull_request.draft == false
 
-  generate-preview:
+  read-tweet-md:
     runs-on: ubuntu-latest
     needs: release-file-check
+
+    outputs:
+      tweet: ${{ steps.extract.outputs.tweet }}
+      card_text: ${{ steps.extract.outputs.card_text }}
+
+    steps:
+    - uses: actions/checkout@v1
+    - name: Extract tweet message and changelog
+      id: extract
+      uses: ./.github/read-tweet-action
+      with:
+        changelog: ${{ needs.release-file-check.outputs.changelog }}
+
+
+  generate-preview:
+    runs-on: ubuntu-latest
+    needs: [release-file-check, read-tweet-md]
     if: always() && github.event.pull_request.draft == false
 
     outputs:
@@ -38,7 +55,7 @@ jobs:
       with:
         version: "(next)"
         contributor: ${{ github.event.pull_request.user.login }}
-        description_base64: ${{ needs.release-file-check.outputs.changelog }}
+        description_base64: ${{ needs.read-tweet-md.outputs.card_text }}
 
     - name: Uploads preview
       id: upload
