--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
     rev: v0.910
     hooks:
       - id: mypy
-        args: [--ignore-missing-imports]
+        args: [--ignore-missing-imports, --exclude=(main\.py$)]
 
   - repo: https://github.com/pycqa/isort
     rev: 5.9.3
