--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -39,6 +39,14 @@ jobs:
       with:
         changelog: ${{ needs.release-file-check.outputs.changelog }}
 
+  validate-tweet:
+    runs-on: ubuntu-latest
+    needs: read-tweet-md
+    # TODO: skip if no tweet
+    steps:
+      - uses: actions/checkout@v1
+      - name: Validate tweet
+        uses: ./.github/validate-tweet-action
 
   generate-preview:
     runs-on: ubuntu-latest
